--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -8,11 +8,13 @@
 
     <LinearLayout
         android:id="@+id/baseLayoutContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="398dp"
+        android:layout_height="582dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        tools:layout_editor_absoluteX="4dp"
+        tools:layout_editor_absoluteY="16dp"
+        tools:ignore="MissingConstraints"
+        android:weightSum="1">
 
         <EditText
             android:id="@+id/alarmNameEdit"
@@ -25,7 +27,8 @@
             android:inputType="text"
             android:text="@string/inputAlarmName"
             tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="72dp"/>
+            tools:layout_editor_absoluteY="72dp"
+            tools:ignore="LabelFor,RtlHardcoded" />
 
         <TimePicker
             android:id="@+id/alarmTimePicker"
@@ -42,23 +45,30 @@
 
         <Button
             android:id="@+id/buttonAddFlashCard"
-            android:layout_width="match_parent"
+            android:layout_width="387dp"
             android:layout_height="wrap_content"
             android:onClick="addFlashCard"
             android:text="@string/label_addFlashCard"/>
 
+        <fragment
+            android:id="@+id/fragment3"
+            android:name="android.support.v4.app.ListFragment"
+            android:layout_width="390dp"
+            android:layout_height="135dp"
+            tools:layout="@layout/fragment_alarm_edit" />
+
         <Button
             android:id="@+id/buttonCreateAlarm"
             style="@style/Widget.AppCompat.Button.Colored"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_width="389dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
             android:onClick="createNewAlarm"
             android:text="@string/label_setNewAlarm"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            tools:layout_editor_absoluteY="417dp"/>
+            tools:layout_editor_absoluteY="417dp" />
 
     </LinearLayout>
 
