--- a/app/src/main/res/layout/activity_alarm_questions.xml
+++ b/app/src/main/res/layout/activity_alarm_questions.xml
@@ -38,7 +38,7 @@
             android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
+            android:id="@+id/classname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/classid"
