--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -19,15 +19,17 @@
 
         <Button
             android:id="@+id/buttonDeleteAlarm"
+            style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginRight="40dp"
+            android:onClick="deleteAlarm"
             android:text="@string/label_deleteAlarm"/>
 
         <Button
             android:id="@+id/buttonCreateAlarm"
-            style="@style/Widget.AppCompat.Button.Colored"
+            style="@style/Widget.AppCompat.Button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
