--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -18,26 +18,36 @@
         tools:layout_editor_absoluteY="8dp">
 
         <Button
-            android:id="@+id/buttonDeleteAlarm"
-            style="@style/Widget.AppCompat.Button.Colored"
+            android:id="@+id/buttonCreateAlarm"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginRight="40dp"
-            android:onClick="deleteAlarm"
-            android:text="@string/label_deleteAlarm"/>
+            android:layout_marginLeft="40dp"
+            android:layout_toEndOf="@id/buttonDeleteAlarm"
+            android:background="@android:color/background_light"
+            android:fontFamily="sans-serif"
+            android:onClick="createNewAlarm"
+            android:text="@string/label_setNewAlarm"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:textColor="@android:color/black"
+            android:textSize="14sp"
+            android:textStyle="bold"/>
 
         <Button
-            android:id="@+id/buttonCreateAlarm"
-            style="@style/Widget.AppCompat.Button"
+            android:id="@+id/buttonDeleteAlarm"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_marginLeft="40dp"
-            android:layout_toEndOf="@id/buttonDeleteAlarm"
-            android:onClick="createNewAlarm"
-            android:text="@string/label_setNewAlarm"
-            android:textAppearance="@style/TextAppearance.AppCompat.Button"/>
+            android:layout_marginRight="40dp"
+            android:background="@android:color/background_light"
+            android:fontFamily="sans-serif"
+            android:onClick="deleteAlarm"
+            android:text="@string/label_deleteAlarm"
+            android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            android:textColor="@android:color/holo_red_dark"
+            android:textStyle="bold"/>
 
         <EditText
             android:id="@+id/alarmNameEdit"
