--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -7,14 +7,11 @@
     tools:context="csuchico.smartnap.AlarmEdit">
 
     <RelativeLayout
-        android:layout_width="0dp"
+        android:id="@+id/buttonBarContainer"
+        android:layout_width="368dp"
         android:layout_height="wrap_content"
-        android:paddingBottom="5dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="5dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:background="@color/colorLightBlue"
+        tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="8dp">
 
         <Button
@@ -25,7 +22,6 @@
             android:layout_alignParentStart="true"
             android:layout_marginLeft="40dp"
             android:layout_toEndOf="@id/buttonDeleteAlarm"
-            android:background="@android:color/background_light"
             android:fontFamily="sans-serif"
             android:onClick="createNewAlarm"
             android:text="@string/label_setNewAlarm"
@@ -41,19 +37,31 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="40dp"
-            android:background="@android:color/background_light"
             android:fontFamily="sans-serif"
             android:onClick="deleteAlarm"
             android:text="@string/label_deleteAlarm"
             android:textAppearance="@style/TextAppearance.AppCompat.Button"
             android:textColor="@android:color/holo_red_dark"
             android:textStyle="bold"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/mainContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonBarContainer"
+        android:paddingBottom="5dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="5dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonBarContainer">
 
         <EditText
             android:id="@+id/alarmNameEdit"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/buttonCreateAlarm"
             android:layout_marginTop="20dp"
             android:ems="10"
             android:inputType="text"
