--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
     <color name="colorDarkBlue">#0044cc</color>
-    <color name="colorLighterBlue">#0099FF</color>
+    <color name="colorLighterBlue">#0099ff</color>
     <color name="black_overlay">#66000000</color>
+    <color name="colorLightBlue">#b8c6c6</color>
 </resources>
