--- a/app/src/main/res/layout/activity_alarm_edit.xml
+++ b/app/src/main/res/layout/activity_alarm_edit.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="40dp"
-            android:layout_toEndOf="@id/buttonDeleteAlarm"
+            android:layout_toEndOf="@+id/buttonDeleteAlarm"
             android:fontFamily="sans-serif"
             android:onClick="createNewAlarm"
             android:text="@string/label_setNewAlarm"
